...
                onValueChange = onYearChange,
                maxLength = 4,
                label = stringResource(R.string.common_year_suffix),
                enabled = enabled,
                isError = isError,
                onFocusChanged = { onFocusChanged("year", it) },
                modifier = Modifier.weight(1.3f).testTag("DateTimeUnit_Year")
            )
            DateTimeUnitField(
                value = month,
                onValueChange = onMonthChange,
                maxLength = 2,
                label = stringResource(R.string.common_month_suffix),
                enabled = enabled,
                isError = isError,
                onFocusChanged = { onFocusChanged("month", it) },
                modifier = Modifier.weight(1f).testTag("DateTimeUnit_Month")
            )
            DateTimeUnitField(
                value = day,
                onValueChange = onDayChange,
                maxLength = 2,
                label = stringResource(R.string.common_day_suffix),
                enabled = enabled,
                isError = isError,
                onFocusChanged = { onFocusChanged("day", it) },
                modifier = Modifier.weight(1f).testTag("DateTimeUnit_Day"),
                // 日付までで入力を止める場合は Done、時まで続ける場合は Next を指定
                imeAction = if (autoFocusHour) ImeAction.Next else ImeAction.Done
            )
            DateTimeUnitField(
                value = hour,
                onValueChange = onHourChange,
                maxLength = 2,
                label = stringResource(R.string.common_hour_suffix),
                enabled = enabled,
                isError = isError,
                onFocusChanged = { onFocusChanged("hour", it) },
                modifier = Modifier.weight(1f).testTag("DateTimeUnit_Hour")
            )
            DateTimeUnitField(
                value = minute,
                onValueChange = onMinuteChange,
                maxLength = 2,
                label = stringResource(R.string.common_minute_suffix),
                enabled = enabled,
                isError = isError,
                onFocusChanged = { onFocusChanged("minute", it) },
                modifier = Modifier.weight(1f).testTag("DateTimeUnit_Minute"),
                imeAction = ImeAction.Done
            )
        }
        
        if (isError && supportingText != null) {
            Box(modifier = Modifier.padding(start = 4.dp)) {
...
